--- a/Slouch.Core/Slouch.Core.csproj
+++ b/Slouch.Core/Slouch.Core.csproj
@@ -50,11 +50,12 @@
     <Compile Include="Downloaders\Grouch\YEnc\CRC32.cs" />
     <Compile Include="Downloaders\Grouch\YEnc\YEncDecoder.cs" />
     <Compile Include="Downloaders\Grouch\YEnc\YEncEncoder.cs" />
-    <Compile Include="Downloaders\IMediaDownloader.cs" />
     <Compile Include="Searchers\IMediaSearcher.cs" />
     <Compile Include="Searchers\IMediaSearchResult.cs" />
+    <Compile Include="Searchers\INzbMediaSearchResult.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings\Settings.cs" />
     <Compile Include="Sources\IMediaItem.cs" />
     <Compile Include="Sources\IMediaSource.cs" />
     <Compile Include="Sources\MediaStatus.cs" />
