--- a/Slouch.Core.Tests/Slouch.Core.Tests.csproj
+++ b/Slouch.Core.Tests/Slouch.Core.Tests.csproj
@@ -63,6 +63,9 @@
       <Name>Slouch.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
