--- a/Slouch.Core/packages.config
+++ b/Slouch.Core/packages.config
@@ -13,4 +13,5 @@
   <package id="Nancy.Owin" version="0.23.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="Paperboy" version="0.1-pre" targetFramework="net45" />
 </packages>
