--- a/Slouch.Core/packages.config
+++ b/Slouch.Core/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.Razor" version="3.2.0-rc" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Core" version="1.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Owin" version="1.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net45" />
@@ -11,6 +12,7 @@
   <package id="Microsoft.Owin.Hosting" version="2.1.0" targetFramework="net45" />
   <package id="Nancy" version="0.23.0" targetFramework="net45" />
   <package id="Nancy.Owin" version="0.23.0" targetFramework="net45" />
+  <package id="Nancy.Viewengines.Razor" version="0.23.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Paperboy" version="0.1-pre" targetFramework="net45" />
