--- a/Slouch.Server/Slouch.Service.csproj
+++ b/Slouch.Server/Slouch.Service.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A717CA58-2592-4F94-AF14-605432E0A905}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Slouch.Server</RootNamespace>
-    <AssemblyName>Slouch.Server</AssemblyName>
+    <RootNamespace>Slouch.Service</RootNamespace>
+    <AssemblyName>Slouch.Service</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
