--- a/Slouch.Service/Slouch.Service.csproj
+++ b/Slouch.Service/Slouch.Service.csproj
@@ -60,6 +60,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Slouch.Core\Slouch.Core.csproj">
+      <Project>{77949bf1-aa04-4621-a868-e5ba49baad8d}</Project>
+      <Name>Slouch.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
