--- a/Slouch.Tests/Slouch.Tests.csproj
+++ b/Slouch.Tests/Slouch.Tests.csproj
@@ -52,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Database\CabinetTests.cs" />
     <Compile Include="Downloaders\Grouch\GrouchDownloaderTests.cs" />
     <Compile Include="Downloaders\Grouch\GrouchInternalNzbTests.cs" />
     <Compile Include="Downloaders\Grouch\GrouchInternalUsenetClientTests.cs" />
